--- a/module/Application/view/error/404.phtml
+++ b/module/Application/view/error/404.phtml
@@ -32,7 +32,7 @@ switch ($this->reason) {
 
 <dl>
     <dt>Controller:</dt>
-    <dd><?php $this->escape($this->controller) ?>
+    <dd><?php echo $this->escape($this->controller) ?>
 <?php
 if (isset($this->controller_class) 
     && $this->controller_class
@@ -42,6 +42,7 @@ if (isset($this->controller_class)
 }
 ?>
 </dd>
+</dl>
 
 <?php endif ?>
 
