changes for latest zf2 b5

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,25 +1,26 @@
-  <div class="hero-unit">
-    <h1>Welcome to <span class="zf-green">Zend Framework 2</span></h1>
-    <p>Congratulations! You have successfully installed the <a href="https://github.com/zendframework/ZendSkeletonApplication" target="_blank">ZF2 Skeleton Application</a>. You are currently running Zend Framework version <?php echo \Zend\Version::VERSION ?>. This skeleton can serve as a simple starting point for you to begin building your application on ZF2.</p>
-    <p><a class="btn btn-success btn-large" href="https://github.com/zendframework/zf2" target="_blank">Fork Zend Framework 2 on GitHub &raquo;</a></p>
-  </div>
+<div class="hero-unit">
+    <h1><?php echo sprintf($this->translate('Welcome to %sZend Framework 2%s'), '<span class="zf-green">', '</span>') ?></h1>
+    <p><?php echo sprintf($this->translate('Congratulations! You have successfully installed the %sZF2 Skeleton Application%s. You are currently running Zend Framework version %s. This skeleton can serve as a simple starting point for you to begin building your application on ZF2.'), '<a href="https://github.com/zendframework/ZendSkeletonApplication" target="_blank">', '</a>', \Zend\Version::VERSION) ?></p>
+    <p><a class="btn btn-success btn-large" href="https://github.com/zendframework/zf2" target="_blank"><?php echo $this->translate('Fork Zend Framework 2 on GitHub') ?> &raquo;</a></p>
+</div>
 
-  <div class="row">
+<div class="row">
+
     <div class="span4">
-      <h2>Follow Development</h2>
-        <p>Zend Framework 2 is under active development. If you are interested in following the development of ZF2, there is a special ZF2 portal on the official Zend Framework webiste which provides links to the ZF2 <a href="http://framework.zend.com/wiki/display/ZFDEV2/Home">wiki</a>, <a href="http://framework.zend.com/zf2/blog">dev blog</a>, <a href="http://framework.zend.com/issues/browse/ZF2">issue tracker</a>, and much more. This is a great resource for staying up to date with the latest developments!</p>
-      <p><a class="btn btn-success" href="http://framework.zend.com/zf2" target="_blank">ZF2 Development Portal &raquo;</a></p>
-
+        <h2><?php echo $this->translate('Follow Development') ?></h2>
+        <p><?php echo sprintf($this->translate('Zend Framework 2 is under active development. If you are interested in following the development of ZF2, there is a special ZF2 portal on the official Zend Framework webiste which provides links to the ZF2 %swiki%s, %sdev blog%s, %sissue tracker%s, and much more. This is a great resource for staying up to date with the latest developments!'), '<a href="http://framework.zend.com/wiki/display/ZFDEV2/Home">', '</a>', '<a href="http://framework.zend.com/zf2/blog">', '</a>', '<a href="http://framework.zend.com/issues/browse/ZF2">', '</a>') ?></p>
+        <p><a class="btn btn-success" href="http://framework.zend.com/zf2" target="_blank"><?php echo $this->translate('ZF2 Development Portal') ?> &raquo;</a></p>
     </div>
-    <div class="span4">
-      <h2>Discover Modules</h2>
-       <p>The community is working on developing a community site to serve as a repository and gallery for ZF2 modules. The project is available <a href="https://github.com/zendframework/modules.zendframework.com">on GitHub</a>. The site is currently live and currently contains a list of some of the modules already available for ZF2.</p>
-      <p><a class="btn btn-success" href="http://modules.zendframework.com/" target="_blank">Explore ZF2 Modules &raquo;</a></p>
-   </div>
-   <div class="span4">
 
-     <h2>Help &amp; Support</h2>
-     <p>If you need any help or support while developing with ZF2, you may reach us via IRC: <a href="irc://irc.freenode.net/zftalk.2">#zftalk.2 on Freenode</a>. We'd love to hear any questions or feedback you may have regarding the beta releases. Alternatively, you may subscribe and post questions to the <a href="http://framework.zend.com/wiki/display/ZFDEV/Mailing+Lists">mailing lists</a>.</p>
-     <p><a class="btn btn-success" href="http://webchat.freenode.net?channels=zftalk.2" target="_blank">Ping us on IRC &raquo;</a></p>
+    <div class="span4">
+        <h2><?php echo $this->translate('Discover Modules') ?></h2>
+        <p><?php echo sprintf($this->translate('The community is working on developing a community site to serve as a repository and gallery for ZF2 modules. The project is available %son GitHub%s. The site is currently live and currently contains a list of some of the modules already available for ZF2.'), '<a href="https://github.com/zendframework/modules.zendframework.com">', '</a>') ?></p>
+        <p><a class="btn btn-success" href="http://modules.zendframework.com/" target="_blank"><?php echo $this->translate('Explore ZF2 Modules') ?> &raquo;</a></p>
    </div>
-  </div>
+
+   <div class="span4">
+       <h2><?php echo $this->translate('Help &amp; Support') ?></h2>
+       <p><?php echo sprintf($this->translate('If you need any help or support while developing with ZF2, you may reach us via IRC: %s#zftalk.2 on Freenode%s. We\'d love to hear any questions or feedback you may have regarding the beta releases. Alternatively, you may subscribe and post questions to the %smailing lists%s.'), '<a href="irc://irc.freenode.net/zftalk.2">', '</a>', '<a href="http://framework.zend.com/wiki/display/ZFDEV/Mailing+Lists">', '</a>') ?></p>
+       <p><a class="btn btn-success" href="http://webchat.freenode.net?channels=zftalk.2" target="_blank"><?php echo $this->translate('Ping us on IRC') ?> &raquo;</a></p>
+   </div>
+</div>
