--- a/module/Application/view/error/index.phtml
+++ b/module/Application/view/error/index.phtml
@@ -1,22 +1,22 @@
-<h1>An error occurred</h1>
+<h1><?php echo $this->translate('An error occurred') ?></h1>
 <h2><?php echo $this->message ?></h2>
 
 <?php if (isset($this->display_exceptions) && $this->display_exceptions): ?>
 
 <?php if(isset($this->exception) && $this->exception instanceof Exception): ?>
 <hr/>
-<h2>Additional information:</h2>
+<h2><?php echo $this->translate('Additional information') ?>:</h2>
 <h3><?php echo get_class($this->exception); ?></h3>
 <dl>
-    <dt>File:</dt>
+    <dt><?php echo $this->translate('File') ?>:</dt>
     <dd>
         <pre class="prettyprint linenums"><?php echo $this->exception->getFile() ?>:<?php echo $this->exception->getLine() ?></pre>
     </dd>
-    <dt>Message:</dt>
+    <dt><?php echo $this->translate('Message') ?>:</dt>
     <dd>
         <pre class="prettyprint linenums"><?php echo $this->exception->getMessage() ?></pre>
     </dd>
-    <dt>Stack trace:</dt>
+    <dt><?php echo $this->translate('Stack trace') ?>:</dt>
     <dd>
         <pre class="prettyprint linenums"><?php echo $this->exception->getTraceAsString() ?></pre>
     </dd>
@@ -26,21 +26,21 @@
     if ($e) :
 ?>
 <hr/>
-<h2>Previous exceptions:</h2>
+<h2><?php echo $this->translate('Previous exceptions') ?>:</h2>
 <ul class="unstyled">
     <?php while($e) : ?>
     <li>
         <h3><?php echo get_class($e); ?></h3>
         <dl>
-            <dt>File:</dt>
+            <dt><?php echo $this->translate('File') ?>:</dt>
             <dd>
                 <pre class="prettyprint linenums"><?php echo $e->getFile() ?>:<?php echo $e->getLine() ?></pre>
             </dd>
-            <dt>Message:</dt>
+            <dt><?php echo $this->translate('Message') ?>:</dt>
             <dd>
                 <pre class="prettyprint linenums"><?php echo $e->getMessage() ?></pre>
             </dd>
-            <dt>Stack trace:</dt>
+            <dt><?php echo $this->translate('Stack trace') ?>:</dt>
             <dd>
                 <pre class="prettyprint linenums"><?php echo $e->getTraceAsString() ?></pre>
             </dd>
@@ -55,7 +55,7 @@
 
 <?php else: ?>
 
-<h3>No Exception available</h3>
+<h3><?php echo $this->translate('No Exception available') ?></h3>
 
 <?php endif ?>
 
