changes 17/07/2012. adding game + gametable classes, starting to connect the dots

--- a/module/Foosball/view/foosball/foosball/index.phtml
+++ b/module/Foosball/view/foosball/foosball/index.phtml
@@ -6,6 +6,7 @@ $this->headTitle($title);
 <p><a href="<?php /*echo $this->url('album', array( 
         'action'=>'add'));*/?>">Add new album</a></p>
 
+<?php echo count($players);?>
 <table class="table">
 <tr>
     <th>Title</th>
