change form strategy. add playerForm and code/routes to accompany

--- a/module/Foosball/view/foosball/foosball/index.phtml
+++ b/module/Foosball/view/foosball/foosball/index.phtml
@@ -3,8 +3,8 @@ $title = 'My Games';
 $this->headTitle($title);
 ?>
 <h1><?php echo $this->escapeHtml($title); ?></h1>
-<p><a href="<?php /*echo $this->url('album', array( 
-        'action'=>'add'));*/?>">Add new album</a></p>
+<p><a href="<?php echo $this->url('player', array( 
+        'action'=>'add'));?>">Add new player</a></p>
 
 <table class="table">
 <tr>
