--- a/module/Foosball/view/foosball/foosball/add.phtml
+++ b/module/Foosball/view/foosball/foosball/add.phtml
@@ -3,3 +3,19 @@ $title = 'Add Player';
 $this->headTitle($title);
 ?>
 
+<h1><?= $this->escapeHtml($title);?></h1>
+
+<?php
+$form = $this->form;
+$form->setAttribute('action', $this->url('player', array('action' => 'add')));
+$form->prepare();
+
+echo $this->form()->openTag($form) . PHP_EOL;
+echo $this->formHidden($form->get('id')) . PHP_EOL;
+echo $this->formRow($form->get('firstname')) . PHP_EOL;
+echo $this->formRow($form->get('lastname')) . PHP_EOL;
+echo $this->formRow($form->get('email')) . PHP_EOL;
+echo $this->formRow($form->get('password')) . PHP_EOL;
+echo $this->formRow($form->get('points')) . PHP_EOL;
+echo $this->formRow($form->get('submit')) . PHP_EOL;
+echo $this->form()->closeTag($form) . PHP_EOL;
