password confirm, points

--- a/module/Foosball/view/foosball/foosball/add.phtml
+++ b/module/Foosball/view/foosball/foosball/add.phtml
@@ -16,6 +16,7 @@ echo $this->formRow($form->get('firstname')) . PHP_EOL;
 echo $this->formRow($form->get('lastname')) . PHP_EOL;
 echo $this->formRow($form->get('email')) . PHP_EOL;
 echo $this->formRow($form->get('password')) . PHP_EOL;
+echo $this->formRow($form->get('password_confirm')) . PHP_EOL;
 echo $this->formRow($form->get('points')) . PHP_EOL;
 echo $this->formRow($form->get('submit')) . PHP_EOL;
 echo $this->form()->closeTag($form) . PHP_EOL;
