--- a/module/Foosball/view/foosball/foosball/index.phtml
+++ b/module/Foosball/view/foosball/foosball/index.phtml
@@ -1,10 +1,10 @@
 <?php 
-$title = 'My Games';
+$title = 'Foosball';
 $this->headTitle($title);
 ?>
-<h1><?php echo $this->escapeHtml($title); ?></h1>
-<p><a href="<?php echo $this->url('player', array( 
-        'action'=>'add'));?>">Add new player</a></p>
+<h2>Players</h2>
+<p><a href="<?= $this->url('player', array( 
+        'action'=>'add'));?>" title="Add Player">Add new player</a></p>
 
 <table class="table">
 <tr>
@@ -12,6 +12,7 @@ $this->headTitle($title);
         <th>Name</th>
         <th>Email</th>
         <th>Points</th>
+        <th>Edit</th>
     </thead>
     <tbody>
     <?php foreach ($players as $player):?>
@@ -19,9 +20,13 @@ $this->headTitle($title);
             <td><?= $this->escapeHtml($player->firstname . ' ' . $player->lastname);?></td>
             <td><?= $this->escapeHtml($player->email);?></td>
             <td><?= $this->escapeHtml($player->points);?></td>
+            <td><a href="<?= $this->url('player', array('action'=>'edit', 'id'=>$player->id));?>" title="Edit Player">Edit</a></td>
         </tr>
     <?php endforeach; ?>
     </tbody>
 </tr>
 
 </table>
+
+<h2>Games</h2>
+<p>coming..</p>
